fix location popup width on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -78,6 +78,18 @@ h1 {
   text-align: center;
 }
 
+@media (orientation: landscape) {
+  .ws-location-popup {
+    width: 351px;
+  }
+}
+
+@media (orientation: portrait) {
+  .leaflet-popup-content {
+    width: 85vw;
+  }
+}
+
 .jarvonia-color {
   color: #bbdff9;
 }
